Mini game finalizado

--- a/html/index.html
+++ b/html/index.html
@@ -8,8 +8,17 @@
     <link rel="stylesheet" type="text/css" href="..//css/style.css">
 </head>
 <body>
-    <div calss="sem-casse"></div>
 
+    <header class="cabecalho">
+        <H1>Wellcome to Game</H1>
+    </header>
+    <main>
+        <div class="game-board">
+            <img src="..//image/clouds.png" class="cloud">
+            <img id="inverter" src="..//image/eggman.gif" class="eggman">
+            <img src="..//image/sonic run.gif" class="sonic">
+        </div>
+    </main>
 </body>
 <script src="..//js/app.js"></script>
 </html>
